functions defined in the <big><tt>functions</tt></big> block but not in the 
<big><tt>reaction rules</tt></big> block. 

** Fixed a bug where in rare cases a function defined in the <big><tt>reaction rules</tt></big> 
block would be typed as a 'ConstantExpression'. This would cause simulation to fail since it
would be placed in the <big><tt>parameters</tt></big> block of the generated NET file.

== BioNetGen-2.2.5-stable ==
'''''2013 July XX'''''

==== New Features ====

===== BioNetGen-to-MCell Converter =====
The converter creates spatial MCell models from BioNetGen. It is called 
by adding "<big><tt>writeMDL()</tt></big>" to the actions of a BioNetGen 
model file. It also requires a geometry input file externally created using 
CellBlender, an addon to the Blender software for creating MCell geometries. 
Execution of a BioNetGen model integrates the reaction network and geometry 
information and creates a MCell model file (.mdl). Alternatively,
"writeMDL()" enables direct execution and import of BioNetGen models from 
CellBlender. The imported BioNetGen model can be integrated with geometries 
created in CellBlender and exported from CellBlender as MCell model files. 

===== AutoHPP =====
AutoHPP automates the construction and simulation of Hybrid Particle/Population
systems. AutoHPP profiles species populations during a test simulation,
identifies species with average population graater than a threshold, and then
constructs and simulates an HPP system where the identified species are treated
as lumped populations. Auto HPP is implemented in the "auto_hpp.pl" script
found in the "Perl2" subfolder (requires NFsim).

==== Minor changes ====
* If "BNG2.pl" is called without a model argument, the help menu is printed to
STDOUT. (In prior releases, BNG2.pl exited silently.)
* When parsing a global function ratelaw, BNG will not create a reference to
the function in the parameter table unless the function call is part of an